--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "bootstrap": "^5.3.3",
     "next": "14.2.14",
     "next-cloudinary": "^6.14.1",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18"
   },
   "devDependencies": {
