--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "bootstrap": "^5.3.3",
+    "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
+    "net": "^1.0.2",
     "next": "14.2.14",
     "next-cloudinary": "^6.14.1",
     "react": "^18",
