--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
     "bootstrap": "^5.3.3",
-    "fs": "^0.0.1-security",
     "googleapis": "^144.0.0",
     "net": "^1.0.2",
     "next": "14.2.14",
