--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.2.1",
     "bootstrap": "^5.3.3",
     "googleapis": "^144.0.0",
+    "lucide-react": "^0.525.0",
     "net": "^1.0.2",
     "next": "14.2.14",
     "next-cloudinary": "^6.14.1",
